[gd_scene load_steps=24 format=4 uid="uid://qujhsvriffxk"]

[ext_resource type="Shader" uid="uid://0vacnrh74wjb" path="res://world/bg.gdshader" id="1_gia2e"]
[ext_resource type="PackedScene" uid="uid://cas1ebkgs1kfw" path="res://entities/tiles/SpawnNest.tscn" id="1_kopsk"]
[ext_resource type="Script" uid="uid://ce6jxw7xe1a86" path="res://world/game.gd" id="1_ndgmm"]
[ext_resource type="PackedScene" uid="uid://b14dvx67drebc" path="res://entities/player/Player.tscn" id="1_yrunw"]
[ext_resource type="Shader" uid="uid://cxjhjvndfeyuk" path="res://misc/logic/biomes.gdshader" id="2_h1bdy"]
[ext_resource type="Shader" uid="uid://m2ujlgdhoe3n" path="res://world/emptiness_border.gdshader" id="4_7c4bj"]
[ext_resource type="Script" uid="uid://dgegklgqwvpxa" path="res://misc/logic/char_texture.gd" id="4_i4b1j"]
[ext_resource type="Script" uid="uid://by5pvpniu1o1d" path="res://editor/bakeable_noise.gd" id="5_nrtoj"]
[ext_resource type="TileSet" uid="uid://cr8mn87yb0vyh" path="res://world/Tiles.tres" id="7_8mymi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7c4bj"]
shader = ExtResource("2_h1bdy")
shader_parameter/seed = 0
shader_parameter/FREQUENCY = 10.0
shader_parameter/JITTER = 1.0

[sub_resource type="Curve" id="Curve_1imk8"]
_data = [Vector2(0, 0), 0.0, 6.42857, 0, 0, Vector2(0.486667, 1), 0.0, -3.64992, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_wpbas"]
curve = SubResource("Curve_1imk8")

[sub_resource type="Curve" id="Curve_f5g5g"]
_data = [Vector2(0.52, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -6.42858, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7rexb"]
curve = SubResource("Curve_f5g5g")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2nmfm"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 60.0
angle_min = 45.0
angle_max = 45.0
gravity = Vector3(0, 0, 0)
radial_accel_min = 0.999998
radial_accel_max = 25.0
scale_max = 3.0
scale_curve = SubResource("CurveTexture_7rexb")
color = Color(1, 1, 1, 0.313726)
alpha_curve = SubResource("CurveTexture_wpbas")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i4b1j"]
shader = ExtResource("1_gia2e")
shader_parameter/default_effect = 1.0
shader_parameter/peace_effect = 0.0

[sub_resource type="Image" id="Image_crsqw"]
data = {
"data": PackedByteArray("/////w=="),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 1
}

[sub_resource type="ImageTexture" id="ImageTexture_o1tcx"]
image = SubResource("Image_crsqw")
script = ExtResource("4_i4b1j")
metadata/_custom_type_script = "uid://dgegklgqwvpxa"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_i4b1j"]
noise_type = 0
frequency = 0.02
fractal_octaves = 2
fractal_lacunarity = 5.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_c0d7e"]
width = 600
height = 1
seamless = true
noise = SubResource("FastNoiseLite_i4b1j")
script = ExtResource("5_nrtoj")
bake_path = ""
metadata/_custom_type_script = "uid://by5pvpniu1o1d"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nrtoj"]
shader = ExtResource("4_7c4bj")
shader_parameter/noise = SubResource("NoiseTexture2D_c0d7e")

[sub_resource type="Gradient" id="Gradient_7c4bj"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nrtoj"]
gradient = SubResource("Gradient_7c4bj")
width = 1
height = 256
fill_to = Vector2(0, 1)

[node name="World" type="Node2D"]
script = ExtResource("1_ndgmm")

[node name="BiomeMap" type="SubViewport" parent="."]
size = Vector2i(1024, 1024)
render_target_update_mode = 0

[node name="ColorRect" type="ColorRect" parent="BiomeMap"]
material = SubResource("ShaderMaterial_7c4bj")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spores" type="GPUParticles2D" parent="."]
amount = 100
lifetime = 15.0
preprocess = 20.0
visibility_rect = Rect2(-1500, -1500, 3000, 3000)
process_material = SubResource("ParticleProcessMaterial_2nmfm")

[node name="Background" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_i4b1j")
scale = Vector2(20450, 20450)
texture = SubResource("ImageTexture_o1tcx")

[node name="WorldEnemySpawnAttempt" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="EmptinessBorder" type="Line2D" parent="."]
material = SubResource("ShaderMaterial_nrtoj")
points = PackedVector2Array(10240, 0, 0, 10240, -10240, 0, 0, -10240)
closed = true
width = 40.0
texture = SubResource("GradientTexture2D_nrtoj")
texture_mode = 2
antialiased = true

[node name="EmptinessDamage" type="Timer" parent="."]
wait_time = 0.1

[node name="Structures" type="Node2D" parent="."]

[node name="NewTiles" type="TileMapLayer" parent="Structures"]
position = Vector2(-10, -10)
tile_map_data = PackedByteArray("AAD8//7/AAABAAAAAAD9//3/AAABAAAAAAD+//z/AAABAAAAAAACAPz/AAABAAAAAAADAP3/AAABAAAAAAAEAP7/AAABAAAAAAD8/wIAAAABAAAAAAD9/wMAAAABAAAAAAD+/wQAAAABAAAAAAAEAAIAAAABAAAAAAADAAMAAAABAAAAAAACAAQAAAABAAAAAADy//3/AAABAAAAAADz//7/AAABAAAAAADz/wIAAAABAAAAAADy/wMAAAABAAAAAADt/wIAAAABAAAAAADu/wMAAAABAAAAAADt//7/AAABAAAAAADu//3/AAABAAAAAAADAPL/AAABAAAAAAACAPP/AAABAAAAAAD+//P/AAABAAAAAAD9//L/AAABAAAAAAD9/+7/AAABAAAAAAD+/+3/AAABAAAAAAACAO3/AAABAAAAAAADAO7/AAABAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wEAAAAAAAAAAAD9//7/AAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAAAAAAAAAD+/wMAAAAAAAAAAAD+/wIAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wAAAAAAAAAAAAD+////AAAAAAAAAAD+//7/AAAAAAAAAAD+//3/AAAAAAAAAAD///z/AAAAAAAAAAD///3/AAAAAAAAAAD///7/AAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAP7/AAAAAAAAAAAAAP3/AAAAAAAAAAAAAPz/AAAAAAAAAAABAPz/AAAAAAAAAAABAP3/AAAAAAAAAAABAP7/AAAAAAAAAAABAP//AAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAACAAMAAAAAAAAAAAACAAIAAAAAAAAAAAACAAEAAAAAAAAAAAACAAAAAAAAAAAAAAACAP//AAAAAAAAAAACAP7/AAAAAAAAAAACAP3/AAAAAAAAAAADAP7/AAAAAAAAAAADAP//AAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAAEAP//AAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAKAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAAIAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAP//AAAAAAAAAAAJAP//AAAAAAAAAAAIAP//AAAAAAAAAAAHAP//AAAAAAAAAAAGAP//AAAAAAAAAAAFAP//AAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAD//woAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAACAAUAAAAAAAAAAAADAAUAAAAAAAAAAAADAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAIAAAAAAAAAAAACAAYAAAAAAAAAAAADAAYAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAQAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAIAAAAAAAAAAAD7////AAAAAAAAAAD6////AAAAAAAAAAD5////AAAAAAAAAAD4////AAAAAAAAAAD3////AAAAAAAAAAD2////AAAAAAAAAAD1////AAAAAAAAAAD0////AAAAAAAAAADz////AAAAAAAAAADy/wAAAAAAAAAAAADy////AAAAAAAAAADx////AAAAAAAAAADw////AAAAAAAAAADw/wAAAAAAAAAAAADv////AAAAAAAAAADu////AAAAAAAAAADt////AAAAAAAAAADt/wAAAAAAAAAAAADu/wAAAAAAAAAAAADv/wAAAAAAAAAAAADx/wAAAAAAAAAAAADz/wAAAAAAAAAAAAD0/wAAAAAAAAAAAAD1/wAAAAAAAAAAAAD2/wAAAAAAAAAAAAD3/wAAAAAAAAAAAAD4/wAAAAAAAAAAAAD5/wAAAAAAAAAAAAD6/wAAAAAAAAAAAAD7/wAAAAAAAAAAAAD7/wEAAAAAAAAAAAD6/wEAAAAAAAAAAAD5/wEAAAAAAAAAAAD4/wEAAAAAAAAAAAD3/wEAAAAAAAAAAAD2/wEAAAAAAAAAAAD1/wEAAAAAAAAAAAD0/wEAAAAAAAAAAADz/wEAAAAAAAAAAADy/wEAAAAAAAAAAADx/wEAAAAAAAAAAADw/wEAAAAAAAAAAADv/wEAAAAAAAAAAADu/wEAAAAAAAAAAADt/wEAAAAAAAAAAADs////AAAAAAAAAADs/wAAAAAAAAAAAADs/wEAAAAAAAAAAADs/wIAAAAAAAAAAADs/wMAAAAAAAAAAADt/wMAAAAAAAAAAADt/wQAAAAAAAAAAADu/wQAAAAAAAAAAADv/wQAAAAAAAAAAADw/wQAAAAAAAAAAADx/wQAAAAAAAAAAADy/wQAAAAAAAAAAADz/wMAAAAAAAAAAAD0/wMAAAAAAAAAAAD0/wIAAAAAAAAAAAD0//7/AAAAAAAAAAD0//3/AAAAAAAAAADz//3/AAAAAAAAAADz//z/AAAAAAAAAADy//z/AAAAAAAAAADx//z/AAAAAAAAAADw//z/AAAAAAAAAADv//z/AAAAAAAAAADu//z/AAAAAAAAAADt//z/AAAAAAAAAADt//3/AAAAAAAAAADs//3/AAAAAAAAAADs//7/AAAAAAAAAADv//3/AAAAAAAAAADw//3/AAAAAAAAAADx//3/AAAAAAAAAADx//7/AAAAAAAAAADy//7/AAAAAAAAAADw//7/AAAAAAAAAADv//7/AAAAAAAAAADu//7/AAAAAAAAAADu/wIAAAAAAAAAAADv/wIAAAAAAAAAAADw/wIAAAAAAAAAAADx/wIAAAAAAAAAAADy/wIAAAAAAAAAAADx/wMAAAAAAAAAAADw/wMAAAAAAAAAAADv/wMAAAAAAAAAAAD7/wIAAAAAAAAAAAD7/wMAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD9/wQAAAAAAAAAAAD9/wUAAAAAAAAAAAD+/wUAAAAAAAAAAAD+/wYAAAAAAAAAAAD9/wYAAAAAAAAAAAD8/wYAAAAAAAAAAAD8/wUAAAAAAAAAAAD7/wUAAAAAAAAAAAD7/wQAAAAAAAAAAAD6/wQAAAAAAAAAAAD6/wMAAAAAAAAAAAD6/wIAAAAAAAAAAAD///v/AAAAAAAAAAD///r/AAAAAAAAAAD///n/AAAAAAAAAAD///j/AAAAAAAAAAD///f/AAAAAAAAAAD///b/AAAAAAAAAAD///X/AAAAAAAAAAD///T/AAAAAAAAAAD///P/AAAAAAAAAAD///L/AAAAAAAAAAD///H/AAAAAAAAAAD///D/AAAAAAAAAAD//+//AAAAAAAAAAD//+7/AAAAAAAAAAD//+3/AAAAAAAAAAAAAO3/AAAAAAAAAAABAO3/AAAAAAAAAAABAO7/AAAAAAAAAAAAAO7/AAAAAAAAAAAAAO//AAAAAAAAAAABAO//AAAAAAAAAAABAPD/AAAAAAAAAAAAAPD/AAAAAAAAAAAAAPH/AAAAAAAAAAAAAPL/AAAAAAAAAAAAAPP/AAAAAAAAAAAAAPT/AAAAAAAAAAAAAPX/AAAAAAAAAAAAAPb/AAAAAAAAAAAAAPf/AAAAAAAAAAAAAPj/AAAAAAAAAAABAPH/AAAAAAAAAAABAPL/AAAAAAAAAAABAPP/AAAAAAAAAAABAPT/AAAAAAAAAAABAPX/AAAAAAAAAAABAPb/AAAAAAAAAAABAPf/AAAAAAAAAAABAPj/AAAAAAAAAAABAPn/AAAAAAAAAAABAPr/AAAAAAAAAAABAPv/AAAAAAAAAAAAAPv/AAAAAAAAAAAAAPr/AAAAAAAAAAAAAPn/AAAAAAAAAAD9/+//AAAAAAAAAAD+/+//AAAAAAAAAAD+/+7/AAAAAAAAAAACAO7/AAAAAAAAAAACAO//AAAAAAAAAAADAO//AAAAAAAAAAADAPD/AAAAAAAAAAADAPH/AAAAAAAAAAACAPH/AAAAAAAAAAACAPD/AAAAAAAAAAD+//D/AAAAAAAAAAD9//D/AAAAAAAAAAD9//H/AAAAAAAAAAD+//H/AAAAAAAAAAACAPL/AAAAAAAAAAD+//L/AAAAAAAAAAD8//L/AAAAAAAAAAD8//P/AAAAAAAAAAD9//P/AAAAAAAAAAD9//T/AAAAAAAAAAD+//T/AAAAAAAAAAACAPT/AAAAAAAAAAADAPT/AAAAAAAAAAADAPP/AAAAAAAAAAAEAPP/AAAAAAAAAAAEAPL/AAAAAAAAAAAEAPH/AAAAAAAAAAAEAPD/AAAAAAAAAAAEAO//AAAAAAAAAAAEAO7/AAAAAAAAAAAEAO3/AAAAAAAAAAADAO3/AAAAAAAAAAADAOz/AAAAAAAAAAACAOz/AAAAAAAAAAABAOz/AAAAAAAAAAAAAOz/AAAAAAAAAAD//+z/AAAAAAAAAAD+/+z/AAAAAAAAAAD9/+z/AAAAAAAAAAD9/+3/AAAAAAAAAAD8/+3/AAAAAAAAAAD8/+7/AAAAAAAAAAD8/+//AAAAAAAAAAD8//D/AAAAAAAAAAD8//H/AAAAAAAAAAD7//7/AAAAAAAAAAD7//3/AAAAAAAAAAD8//3/AAAAAAAAAAD8//z/AAAAAAAAAAD9//z/AAAAAAAAAAD9//v/AAAAAAAAAAD+//v/AAAAAAAAAAD+//r/AAAAAAAAAAD9//r/AAAAAAAAAAD8//r/AAAAAAAAAAD8//v/AAAAAAAAAAD7//v/AAAAAAAAAAD7//z/AAAAAAAAAAD6//3/AAAAAAAAAAD6//7/AAAAAAAAAAD6//z/AAAAAAAAAAACAPv/AAAAAAAAAAADAPv/AAAAAAAAAAADAPz/AAAAAAAAAAAEAPz/AAAAAAAAAAAEAP3/AAAAAAAAAAAFAP3/AAAAAAAAAAAFAP7/AAAAAAAAAAACAPr/AAAAAAAAAAADAPr/AAAAAAAAAAAEAPr/AAAAAAAAAAAEAPv/AAAAAAAAAAAFAPv/AAAAAAAAAAAFAPz/AAAAAAAAAAAGAPz/AAAAAAAAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAAAAAD8/w0AAAAAAAAAAAD8/w4AAAAAAAAAAAD8/w8AAAAAAAAAAAD8/xAAAAAAAAAAAAD8/xEAAAAAAAAAAAD8/xIAAAAAAAAAAAD9/wwAAAAAAAAAAAD9/w0AAAAAAAAAAAD9/w4AAAABAAAAAAD9/w8AAAAAAAAAAAD9/xAAAAAAAAAAAAD9/xEAAAAAAAAAAAD9/xIAAAABAAAAAAD9/xMAAAAAAAAAAAD+/wwAAAAAAAAAAAD+/w0AAAABAAAAAAD+/w4AAAAAAAAAAAD+/w8AAAAAAAAAAAD+/xAAAAAAAAAAAAD+/xEAAAAAAAAAAAD+/xIAAAAAAAAAAAD+/xMAAAABAAAAAAD//wwAAAAAAAAAAAD//w0AAAAAAAAAAAD//w4AAAAAAAAAAAD//w8AAAAAAAAAAAD//xAAAAAAAAAAAAD//xEAAAAAAAAAAAD//xIAAAAAAAAAAAD//xMAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA8AAAAAAAAAAAAAABAAAAAAAAAAAAAAABEAAAAAAAAAAAAAABIAAAAAAAAAAAAAABMAAAAAAAAAAAABAAwAAAAAAAAAAAABAA0AAAAAAAAAAAABAA4AAAAAAAAAAAABAA8AAAAAAAAAAAABABAAAAAAAAAAAAABABEAAAAAAAAAAAABABIAAAAAAAAAAAABABMAAAAAAAAAAAACAAwAAAAAAAAAAAACAA0AAAABAAAAAAACAA4AAAAAAAAAAAACAA8AAAAAAAAAAAACABAAAAAAAAAAAAACABEAAAAAAAAAAAACABIAAAAAAAAAAAACABMAAAABAAAAAAADAAwAAAAAAAAAAAADAA0AAAAAAAAAAAADAA4AAAABAAAAAAADAA8AAAAAAAAAAAADABAAAAAAAAAAAAADABEAAAAAAAAAAAADABIAAAABAAAAAAADABMAAAAAAAAAAAAEAA0AAAAAAAAAAAAEAA4AAAAAAAAAAAAEAA8AAAAAAAAAAAAEABAAAAAAAAAAAAAEABEAAAAAAAAAAAAEABIAAAAAAAAAAAD8/xMAAAAAAAAAAAD9/xQAAAAAAAAAAAD+/xQAAAAAAAAAAAD//xQAAAAAAAAAAAAAABQAAAAAAAAAAAABABQAAAAAAAAAAAACABQAAAAAAAAAAAADABQAAAAAAAAAAAAEABMAAAAAAAAAAAAMAP3/AAAAAAAAAAAMAP7/AAAAAAAAAAAMAP//AAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAANAPz/AAAAAAAAAAANAP3/AAAAAAAAAAANAP7/AAABAAAAAAANAP//AAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAABAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAAOAPz/AAAAAAAAAAAOAP3/AAABAAAAAAAOAP7/AAAAAAAAAAAOAP//AAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAABAAAAAAAOAAQAAAAAAAAAAAAPAPz/AAAAAAAAAAAPAP3/AAAAAAAAAAAPAP7/AAAAAAAAAAAPAP//AAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAQAPz/AAAAAAAAAAAQAP3/AAAAAAAAAAAQAP7/AAAAAAAAAAAQAP//AAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAARAPz/AAAAAAAAAAARAP3/AAAAAAAAAAARAP7/AAAAAAAAAAARAP//AAAAAAAAAAARAAAAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAASAPz/AAAAAAAAAAASAP3/AAABAAAAAAASAP7/AAAAAAAAAAASAP//AAAAAAAAAAASAAAAAAAAAAAAAAASAAEAAAAAAAAAAAASAAIAAAAAAAAAAAASAAMAAAABAAAAAAASAAQAAAAAAAAAAAATAPz/AAAAAAAAAAATAP3/AAAAAAAAAAATAP7/AAABAAAAAAATAP//AAAAAAAAAAATAAAAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAABAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAAUAP3/AAAAAAAAAAAUAP7/AAAAAAAAAAAUAP//AAAAAAAAAAAUAAAAAAAAAAAAAAAUAAEAAAAAAAAAAAAUAAIAAAAAAAAAAAAUAAMAAAAAAAAAAAALAP//AAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAD//wsAAAAAAAAAAAAAAAsAAAAAAAAAAAABAAsAAAAAAAAAAAA=")
tile_set = ExtResource("7_8mymi")

[node name="SpawnNest" parent="Structures" instance=ExtResource("1_kopsk")]

[node name="Bullets" type="Node2D" parent="."]

[node name="Entities" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("1_yrunw")]

[connection signal="timeout" from="WorldEnemySpawnAttempt" to="." method="spawn_attempt"]
[connection signal="timeout" from="EmptinessDamage" to="." method="_on_emptiness_damage_timeout"]
